--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <div class="footer">
-            <p>Created by Aleš</p>
+            <p>Created by Aleš Žnidar</p>
         </div>
 
     </div>
